# vaulted

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitpod.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.artifacts/test/: microsoft_edge_password_export.csv
.artifacts/tmp/: vault.json
.config/: Vaulted.toml  default.config.toml
.docker/: docker-compose.yml
.github/: dependabot.yml
.github/workflows/: clippy.yml  docker.yml  manual.yml  rust-clippy.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs  settings.rs
cli/src/cli/: cmds.rs
crates/core/: Cargo.toml
crates/core/src/components/passphrases/: passphrase.rs
crates/core/src/components/vaults/: builder.rs
crates/core/src/core/: mod.rs  primitives.rs
crates/core/src/data/models/: credentials.rs
crates/core/tests/: default.rs
crates/sdk/: Cargo.toml
crates/sdk/examples/: simple.rs
crates/sdk/src/: lib.rs
lib/: Cargo.toml
lib/examples/: simple.rs
lib/src/actors/: mod.rs
lib/src/components/: mod.rs
lib/src/components/archives/: archive.rs
lib/src/components/creds/: credential.rs  mod.rs
lib/src/components/passphrases/: builder.rs
lib/src/components/passwords/: builder.rs  mod.rs  password.rs
lib/src/components/vaults/: access.rs  vault.rs
lib/src/core/utils/: fs.rs
lib/src/data/models/: mod.rs
scripts/: docker_build.sh
sdk/: Cargo.toml
sdk/src/actors/access/: mod.rs
sdk/src/components/artifacts/: artifact.rs  mod.rs
sdk/src/data/: mod.rs
sdk/tests/: vaults.rs
src/: lib.rs  main.rs
src/actors/: mod.rs
src/actors/access/: mod.rs
src/actors/aggregate/: mod.rs
src/actors/save/: mod.rs
src/actors/setup/: initializer.rs  mod.rs
src/components/: mod.rs
src/components/archives/: archive.rs  mod.rs
src/components/passwords/: builder.rs  mod.rs  password.rs
src/components/vaults/: access.rs  mod.rs  vault.rs
src/core/: interface.rs  mod.rs  primitives.rs
src/core/cli/: args.rs  cmds.rs  mod.rs
src/core/utils/: fs.rs  mod.rs
src/data/: mod.rs
src/data/models/: accounts.rs  credentials.rs  mod.rs
tests/: default.rs  vaults.rs
tests/core/: vaults.rs
vaulted/: Cargo.toml
vaulted/src/: main.rs
vaulted/src/actors/aggregate/: mod.rs
vaulted/src/cli/: commands.rs  mod.rs
vaulted/src/cli/args/: mod.rs  password.rs
vaulted/src/components/passphrases/: mod.rs
vaulted/src/components/vaults/: mod.rs
vaulted/src/core/utils/: fs.rs
vaulted/src/data/models/: credentials.rs
vaulted/src/server/: server.rs
vaulted/src/states/: mod.rs  state.rs
