[workspace]
default-members = [
    "vaulted"
]
exclude = [
    "xtask"
]
members = [
    "crates/core",
    "crates/sdk",
    "vaulted"
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "unwind"
rpath = false
opt-level = "z"
