[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Vaulted is a complete credential management solution written in Rust"
edition = "2021"
homepage = "https://github.com/FL03/vaulted/wiki"
keywords = [ "binary", "cli", "credentials", "scsys" ]
license = "Apache-2.0"
name = "vaulted"
readme = "README.md"
repository = "https://github.com/FL03/vaulted"
version = "0.1.8"

[[bin]]
bench = false
name = "vaulted"
path = "src/main.rs"
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
axum = { features = ["headers", "http2", "macros"], version = "0.6.1" }
clap = { features = ["cargo", "derive", "env"], version = "4.0.29" }
futures = "0.3.25"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.23" }
scsys = { features = ["full"], version = "0.1.37" }
serde = { features = ["derive"], version = "1.0.151" }
serde_json = "1.0.90"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["full"], version = "1.23.0" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.4.0" }
tracing = "0.1.37"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }

[dependencies.vaulted-sdk]
features = ["full"]
path = "../crates/sdk"
version = "0.1.8"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
