[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Vaulted is a secure credential management utility"
edition = "2021"
homepage = "https://gihub.com/FL03/vaulted/wiki"
keywords = []
license = "Apache-2.0"
name = "vaulted-core"
publish = true
repository = "https://gihub.com/FL03/vaulted"
version = "0.1.8"

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
argon2 = "0.4.1"
log = "0.4.17"
lru = "0.10.0"
provider-archive = "0.6.0"
rand = { features = [], version = "0.8.5" }
scsys = { features = ["full"], version = "0.1.37" }
serde = { features = ["derive"], version = "1.0.151" }
serde_json = "1.0.91"
strum = { features = ["derive"], version = "0.24.1" }


[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
